[metadata]
name = httpmi
summary = An HTTP proxy for IPMI commands.
description-file =
    README.md
author = Oath
author-email = jim.rollenhagen@oath.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    httpmi
